--- a/resources/views/associateprofile.html
+++ b/resources/views/associateprofile.html
@@ -1,18 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
 
-@extends('layouts.layout')
-@section('content')
-
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Associate-profile</title> <!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+	<!-- Icons link -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="/css/style.css" />
+</head>
 
 <body>
-
-
-
-
+	<!-- Header section -->
+	<header class="bg-purple-custom">
+		<div class="container">
+			<div class="head">
+				<nav class="navbar navbar-expand-sm  navbar-dark">
+					<div class="container-fluid"> <a class="navbar-brand" href="/index.html"><img
+								src="assets/images/Logo.png" alt="" class="logo-hedd"></a> <button
+							class="navbar-toggler" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
+						<div class="collapse navbar-collapse" id="collapsibleNavbar">
+							<ul class="navbar-nav">
+								<li class="nav-item"> <a class="nav-link" href="/companion-profile.html">Companions</a>
+								</li>
+								<li class="nav-item"> <a class="nav-link" href="#">How It Works</a> </li>
+								<li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
+							</ul>
+							<div class="login-navv"> <a href="login.html" class="bbtn-loginn">Login</a> <a
+									href="register.html" class="bbtn-registerr">Register</a> </div>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</header> <!-- associateprofile form -->
 	<section class="associateprofile">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 assoiate-left d-flex align-items-center justify-content-center"> <img
-						class="image-assoiate" src="{{asset('assests/images/assoiateimg.svg')}}" alt="" /> </div>
+						class="image-assoiate" src="/assets/images/assoiateimg.svg" alt="" /> </div>
 				<div class="col-md-6 assoiatee-right justify-content-center">
 					<div class="assoiate-head">
 						<h2>Let’s Complete Your Profile</h2>
@@ -20,7 +51,7 @@
 							suggest people who align with your interests and experiences. </p>
 					</div>
 					<div class="text-center profile-assoiate"> <img id="profilePreview"
-							src="{{asset('assests/images/profileimgasssoi.svg')}}" alt="Profile Preview"
+							src="/assets/images/profileimgasssoi.svg" alt="Profile Preview"
 							style="width: 120px; height: 120px; border-radius: 50%;" />
 						<p> Upload a Profile Picture <br />This helps companions see who’s interested in them. </p>
 						<input type="file" id="profileUpload" accept="image/*" style="display: none;" /> <button
@@ -47,7 +78,6 @@
 							</div>
 						</div>
 
-
 						<!-- Modal for Accordion Item 1 -->
 						<div id="interestModal1" class="modal-overlay">
 							<div class="modal-contentselect">
@@ -55,28 +85,23 @@
 								<h2>What Are You Interested In?</h2>
 								<p>Select a few topics you genuinely enjoy. This helps us match you with better
 									connections.</p>
-
-         <!-- this data is coming from admin -->
-							<div class="interest-buttons">
-
-                    @foreach ($data as $index => $hobby)
-                          <button class="interest-btn" data-interest="🎵 Music"></i>
-                          <img src="/uploads/hobbies/{{ $hobby->image }}" width="20" alt="{{ $hobby->hobbie }}"> {{ $hobby->hobbie }}
-                          </button>
-
-                    @endforeach
-							
-							</div>
-
-
+								<div class="interest-buttons">
+									<button class="interest-btn" data-interest="🎵 Music"><img
+											src="/assets/images/modelmusic.png" alt="" class="modelunic-icon">
+										Music</button>
+									<button class="interest-btn" data-interest="📚 Books"><img
+											src="/assets/images/modlbook.png" alt="" class="modelunic-icon">
+										Books</button>
+									<button class="interest-btn" data-interest="🍱 Foodie"><img
+											src="/assets/images/foodiemodel.png" alt="" class="modelunic-icon">
+										Foodie</button>
+								</div>
 								<div class="d-flex justify-content-center confirmm-modelbtn">
 									<button class="clearall-btn" id="clearallBtn1">Clear All</button>
 									<button class="confirmm-selectbtn" id="saveInterestBtn1">Confirm Selection</button>
 								</div>
 							</div>
 						</div>
-
-
 
 						<!-- Accordion Item 2 -->
 						<div class="accordion-item">
@@ -210,13 +235,44 @@
 				</div>
 			</div>
 	</section> <!-- Footer -->
-
-
-
-
+	<section class="footer py-5">
+		<div class="container">
+			<footer class="foot-footer">
+				<div class="row ">
+					<!-- Logo + Description -->
+					<div class="col-12 col-md-4 mb-4 footer-border">
+						<div class="logo-textfooter"><img src="assets/images/Logo.png" alt=""></div>
+						<p class="logo-descriptionfooter"> Clarity gives you the blocks and components you need to
+							create a truly professional website. </p>
+						<div class="d-flex justify-content-center justify-content-md-start gap-3 mt-3 social-icons"> <a
+								href="#"><i class="fab fa-twitter "></i></a> <a href="#"><i
+									class="fab fa-facebook-f "></i></a> <a href="#"><i
+									class="fab fa-instagram "></i></a> <a href="#"><i class="fab fa-github "></i></a>
+						</div>
+					</div> <!-- Quick Links 1 -->
+					<div class="col-12 col-md-4 mb-4 footer-border">
+						<h5 class="fw-semibold mb-3">Quick Links</h5>
+						<ul class="list-unstyled footer-links">
+							<li><a href="#" class="text-decoration-none ">Link 1</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 2</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 3</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 4</a></li>
+						</ul>
+					</div> <!-- Quick Links 2 -->
+					<div class="col-12 col-md-4 mb-4 quicc">
+						<h5 class="fw-semibold mb-3">Quick Links</h5>
+						<ul class="list-unstyled footer-links">
+							<li><a href="#" class="text-decoration-none ">Link 1</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 2</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 3</a></li>
+							<li><a href="#" class="text-decoration-none ">Link 4</a></li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+		</div>
+	</section>
 </body> <!-- Bootstrap JS Bundle (includes Popper) -->
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- select model -->
@@ -301,6 +357,14 @@
 		});
 	});
 </script>
+
+
+
+
+
+
+
+
 <!-- continue -->
 <script>
 	const modal = document.getElementById("completionModal");
@@ -350,5 +414,4 @@
 	});
 </script>
 
-
-@endsection
+</html>
